secondfile/objects/DHStatus_PL_Port_Data__c.object
<CustomObject>
    <fields>
        <fullName>Access_Circuit_ID__c</fullName>
        <label>Access Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activation_Status__c</fullName>
        <label>Activation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Type_Action__c</fullName>
        <label>Change Type Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Type__c</fullName>
        <label>Change Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_PrivateLineAccessCircuitData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus-PrivateLineAccessCircuitData</label>
        <referenceTo>DHStatus_PrivateLineAccessCircuitData__c</referenceTo>
        <relationshipLabel>DHStatus-PL Port Datas</relationshipLabel>
        <relationshipName>DHStatus_PL_Port_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Errors__c</fullName>
        <label>Errors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Port_ID__c</fullName>
        <label>Group Port ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Time_Stamp__c</fullName>
        <label>Last Modified Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MLPP_Link_Number__c</fullName>
        <label>MLPP Link Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_ID__c</fullName>
        <label>Port ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USO_Number__c</fullName>
        <label>USO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-PL Port Data</label>
    <nameField>
        <displayFormat>DHPLPD-{000000}</displayFormat>
        <label>DHStatus-PL Port Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-PL Port Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>